[tool.poetry]
name = "pywaves"
version = "2.0.0"
description = "Python library for interacting with the Waves blockchain"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pywaves"}]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
python-axolotl-curve25519 = "*"
base58 = "0.2.5"
protobuf = "3.19.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 